--- a/bootstrap4/css/style1.css
+++ b/bootstrap4/css/style1.css
@@ -23,7 +23,7 @@ html,body{
 	grid-area: sidebar;
 	background-color: #5D718F;
 	display: grid;
-	grid-template-rows: 10% 10% 10% 10% auto;
+	grid-template-rows: 10% 10% 10% 10% 10% auto;
 }
 .main{
 	grid-area: main;
