--- a/bootstrap4/css/style.css
+++ b/bootstrap4/css/style.css
@@ -91,3 +91,20 @@ ul li{
 #table1 th{
 	font-style: bold;
 }
+
+
+.my-custom-scrollbar-a{
+	position: relative;
+	height: 350px;
+	overflow: auto;
+}
+
+.my-custom-scrollbar{
+	position: relative;
+	height: 300px;
+	overflow: auto;
+}
+
+.table-wrapper-scroll-y{
+	display: block;
+}
